Rename lc parameter to subscriber
