# openAPI-v2.spec.json
@@ -72,14 +72,14 @@
         }
       }
     },
-    "/{lc}": {
+    "/{subscriber}": {
       "get": {
         "summary": "Get registrations for local authority.",
         "description": "Returns registrations for the supplied local authority. By default, results are filtered to exclude data marked as collected.",
         "operationId": "get-registrations-for-local-authority",
         "parameters": [
           {
-            "name": "lc",
+            "name": "subscriber",
             "in": "path",
             "description": "The local authority or MIS provider name.",
             "required": true,
@@ -90,7 +90,7 @@
           {
             "name": "local-authorities",
             "in": "query",
-            "description": "The local authorities for which to return data, if different to the organisation supplied in the lc parameter.",
+            "description": "The local authorities for which to return data, if different to the organisation supplied in the subscriber parameter.",
             "schema": {
               "type": "array",
               "items": {
@@ -176,14 +176,14 @@
         }
       }
     },
-    "/{lc}/{fsa_rn}": {
+    "/{subscriber}/{fsa_rn}": {
       "get": {
         "summary": "Get a single registration in full.",
         "description": "Returns a single registration in full from the supplied registration application reference.",
         "operationId": "get-single-registration-for-local-authority",
         "parameters": [
           {
-            "name": "lc",
+            "name": "subscriber",
             "in": "path",
             "description": "The local authority or MIS provider name.",
             "required": true,
@@ -203,7 +203,7 @@
           {
             "name": "local-authority",
             "in": "query",
-            "description": "The local authority for which to return data, if different to the organisation supplied in the lc parameter.",
+            "description": "The local authority for which to return data, if different to the organisation supplied in the subscriber parameter.",
             "schema": {
               "type": "string"
             }
@@ -251,7 +251,7 @@
         "operationId": "update-single-registration-for-local-authority",
         "parameters": [
           {
-            "name": "lc",
+            "name": "subscriber",
             "in": "path",
             "description": "The local authority or MIS provider name.",
             "required": true,
@@ -271,7 +271,7 @@
           {
             "name": "local-authority",
             "in": "query",
-            "description": "The local authority for which to return data, if different to the organisation supplied in the lc parameter.",
+            "description": "The local authority for which to return data, if different to the organisation supplied in the subscriber parameter.",
             "schema": {
               "type": "string"
             }
